Fixed problem with list items having wrong font family & size

--- a/app/custom_modules/dw-layout/input.scss
+++ b/app/custom_modules/dw-layout/input.scss
@@ -1299,6 +1299,7 @@ $img-max-width: 10em;
 
         input {
             @include borders;
+            @include fonts;
 
             flex-basis: 100%;
 
